feat: check auth.php connectivity